--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI (Integration Test)
 
 on:
   push:
@@ -7,40 +7,50 @@ on:
     branches: [ "main" ]
 
 jobs:
-  python-test:
+  # 1. 파이썬 코드 문법 검사
+  python-lint:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ["3.9"]
     steps:
     - uses: actions/checkout@v3
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8
+        
     - name: Lint with flake8
       run: |
+        # 문법 오류와 정의되지 않은 이름 확인 (E9, F63, F7, F82)
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # 모든 파이썬 파일 검사 (경고 허용)
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+  # 2. Docker 이미지 빌드 테스트 (배포 X, 빌드만 확인)
   docker-build-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Check Streamlit Docker Build
+      
+      - name: Check Worker Docker Build
         run: |
-          cd streamlit
+          # 루트에 있는 Dockerfile이 정상적으로 빌드되는지 테스트
           docker build . --file Dockerfile
 
+  # 3. Terraform 코드 형식 검사
   terraform-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: hashicorp/setup-terraform@v2
+      
       - name: Terraform Format Check
         run: |
           cd terraform
